--- a/src/components/action-badge/action-badge.scss
+++ b/src/components/action-badge/action-badge.scss
@@ -1,25 +1,36 @@
-.action-badge {
-    background-color: "#000000";
-    border-radius: "10%";
-    margin: 40;
-    width: 300;
-    padding-left: 10;
-    padding-right: 10;
-    text-align: "center";
-}
+$transparent: rgba(0,0,0,0);
+$faded-green: rgb(91, 116, 68);
+$faded-gray: rgb(94, 99, 100);
+$white: rgb(255, 255, 255);
 
-.action-badge-icon {
-    width: 140;
-    height: 140;
-    border-radius: "50%";
-}
-
-.action-badge-text {
-    color: "#cfcfcf";
-}
-
-.action-badge-link {
-    color: "#22bd10";
+.basic-action {
+    color: $faded-gray;
+    background-color: $white;
+    border-radius: 5px;
+    font-family: Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+    height: 150px;
+    line-height: 20px;
+    margin: 15px 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+    div {
+        a {
+            background-color: $transparent;
+            color: $faded-green;
+            text-decoration-line: underline;
+            text-transform: uppercase;
+            font-family: Ubuntu, Arial, sans-serif;
+            font-size: 17px;
+            font-weight: 500;
+            line-height: 24.29px; 
+        }
+       img {
+           height: 64px;
+           width: 57px;
+       } 
+    }
 }
 
 .not-active {
